--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "start": "node server/server.js",
-      "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-      "install": "cd server && npm i && cd ../client && npm i",
-      "build": "cd client && npm run build"
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "build": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/Susanne85/historicalTreasures/issues"
   },
-  "homepage": "https://github.com/Susanne85/historicalTreasures#readme"
+  "homepage": "https://github.com/Susanne85/historicalTreasures#readme",
+  "dependencies": {
+    "@neo4j/graphql": "^1.2.4",
+    "graphql": "^15.5.1",
+    "neo4j-driver": "^4.3.2"
+  }
 }
