--- a/server/.env
+++ b/server/.env
@@ -1,11 +1,11 @@
 # Use this file to set environment variables with credentials and configuration options
 # This file is provided as an example and should be replaced with your own values
 # You probably don't want to check this into version control!
-
-NEO4J_URI='neo4j://localhost'
+ 
+NEO4J_URI='neo4j+s://07047938.databases.neo4j.io'
 NEO4J_USER='neo4j'
-NEO4J_PASSWORD='khs1khs1'
-NEO4J_DATABASE-'Historical Society'
+NEO4J_PASSWORD='shoqtU1O6TNfp6KF9Sq3NzcwXS8ideUWp5h208uEwDU'
+NEO4J_DATABASE-'historical_treasures'
 
 # Uncomment this line to specify a specific Neo4j database (v4.x+ only)
 #NEO4J_DATABASE=neo4j
